@startuml
!pragma layout smetana
title Modelo Lógico — Esquema Relacional PostgreSQL\nWireless HeatMapper (modalidad 100 % en línea)

skinparam entityBackgroundColor #EBF5FB
skinparam entityBorderColor #2980B9
skinparam entityFontColor #1A252F
skinparam entityHeaderBackgroundColor #2980B9
skinparam entityHeaderFontColor white
skinparam arrowColor #2980B9
skinparam noteBackgroundColor #FFFDE7
skinparam noteFontColor #1A252F

entity "usuario" as USUARIO {
  * id : BIGSERIAL <<PK>>
  --
  email : VARCHAR(120) <<UNIQUE, NOT NULL>>
  password_hash : VARCHAR(60) <<NOT NULL>>
  nombre_completo : VARCHAR(120)
  rol : VARCHAR(10) <<ENUM('ADMIN','TECNICO')>>
  activo : BOOLEAN <<DEFAULT true>>
  fecha_creacion : TIMESTAMPTZ
  ultimo_acceso : TIMESTAMPTZ
}

entity "cliente" as CLIENTE {
  * id : BIGSERIAL <<PK>>
  --
  nombre : VARCHAR(100) <<UNIQUE, NOT NULL>>
  activo : BOOLEAN <<DEFAULT true>>
  fecha_creacion : TIMESTAMPTZ
}

entity "proyecto" as PROYECTO {
  * id : BIGSERIAL <<PK>>
  --
  * tecnico_id : BIGINT <<FK → usuario.id>>
  cliente_id : BIGINT <<FK → cliente.id, NULL>>
  nombre : VARCHAR(100) <<NOT NULL>>
  descripcion : TEXT
  fecha_creacion : TIMESTAMPTZ
  estado : VARCHAR(15) <<ENUM>>
}

entity "plano" as PLANO {
  * id : BIGSERIAL <<PK>>
  --
  * proyecto_id : BIGINT <<FK, NOT NULL>>
  nombre : VARCHAR(100)
  ruta_archivo : VARCHAR(255)
  formato : VARCHAR(5) <<ENUM>>
  escala_m_por_px : DOUBLE PRECISION
  ancho_px : INTEGER
  alto_px : INTEGER
}

entity "punto_medicion" as PUNTO {
  * id : BIGSERIAL <<PK>>
  --
  * plano_id : BIGINT <<FK>>
  coord_x : DOUBLE PRECISION
  coord_y : DOUBLE PRECISION
  ts : TIMESTAMPTZ
  nota : VARCHAR(255)
}

entity "medicion_wifi" as MEDICION {
  * id : BIGSERIAL <<PK>>
  --
  * punto_id : BIGINT <<FK>>
  ssid : VARCHAR(64)
  bssid : VARCHAR(17)
  rssi : SMALLINT
  canal : SMALLINT
  frecuencia_ghz : DOUBLE PRECISION
  nivel : VARCHAR(15) <<ENUM>>
  recibido_en : TIMESTAMPTZ
}

entity "mapa_calor" as MAPA {
  * id : BIGSERIAL <<PK>>
  --
  * plano_id : BIGINT <<FK>>
  escenario_id : BIGINT <<FK, NULL>>
  tipo : VARCHAR(15) <<ENUM>>
  algoritmo : VARCHAR(15) <<ENUM>>
  resolucion : INTEGER
  fecha_generacion : TIMESTAMPTZ
  datos_interpolados : JSONB
}

entity "analisis_cobertura" as ANALISIS {
  * id : BIGSERIAL <<PK>>
  --
  * mapa_id : BIGINT <<FK>>
  zonas_muertas : INTEGER
  solapamientos_ap : INTEGER
  interferencias_canal : INTEGER
  pct_cobertura : DOUBLE PRECISION
}

entity "ap_detectado" as APDET {
  * id : BIGSERIAL <<PK>>
  --
  * analisis_id : BIGINT <<FK>>
  bssid : VARCHAR(17)
  ssid : VARCHAR(64)
  canal : SMALLINT
  rssi_promedio : DOUBLE PRECISION
  coord_x_estimada : DOUBLE PRECISION
  coord_y_estimada : DOUBLE PRECISION
  ubicacion_confirmada : BOOLEAN
}

entity "escenario_optimizado" as ESC {
  * id : BIGSERIAL <<PK>>
  --
  * proyecto_id : BIGINT <<FK>>
  * analisis_id : BIGINT <<FK>>
  nombre : VARCHAR(100)
  cantidad_aps_recomendados : INTEGER
  pct_mejora_esperado : DOUBLE PRECISION
  observaciones_ia : TEXT
  estado : VARCHAR(15) <<ENUM>>
  fecha_generacion : TIMESTAMPTZ
}

entity "recomendacion_ap" as REC {
  * id : BIGSERIAL <<PK>>
  --
  * escenario_id : BIGINT <<FK>>
  ap_detectado_id : BIGINT <<FK, NULL>>
  tipo_accion : VARCHAR(15) <<ENUM>>
  coord_x : DOUBLE PRECISION
  coord_y : DOUBLE PRECISION
  potencia_mw : DOUBLE PRECISION
  canal : SMALLINT
  ssid_sugerido : VARCHAR(64)
  mejora_esperada_db : DOUBLE PRECISION
  prioridad : SMALLINT
  justificacion : TEXT
}

entity "reporte" as REP {
  * id : BIGSERIAL <<PK>>
  --
  * proyecto_id : BIGINT <<FK>>
  analisis_id : BIGINT <<FK, NULL>>
  escenario_id : BIGINT <<FK, NULL>>
  titulo : VARCHAR(100)
  fecha_generacion : TIMESTAMPTZ
  formato : VARCHAR(10) <<ENUM>>
  ruta_archivo : VARCHAR(255)
}

entity "token_enlace" as TOKEN {
  * id : BIGSERIAL <<PK>>
  --
  * proyecto_id : BIGINT <<FK>>
  token : VARCHAR(36) <<UNIQUE>>
  fecha_creacion : TIMESTAMPTZ
  fecha_expiracion : TIMESTAMPTZ
  activo : BOOLEAN
  accesos_usados : INTEGER
  accesos_max : INTEGER
}

CLIENTE ||--o{ PROYECTO : "encarga"
USUARIO ||--o{ PROYECTO : "posee"
PROYECTO ||--o{ PLANO : "tiene"
PLANO ||--o{ PUNTO : "registra"
PUNTO ||--|{ MEDICION : "captura"
PLANO ||--o{ MAPA : "genera"
MAPA ||--o| ANALISIS : "produce"
ANALISIS ||--o{ APDET : "identifica"
PROYECTO ||--o{ ESC : "optimiza"
ANALISIS ||--o{ ESC : "base de"
ESC ||--|{ REC : "agrupa"
ESC ||--o| MAPA : "proyecta"
APDET ||--o{ REC : "reubica"
PROYECTO ||--o{ REP : "exporta"
PROYECTO ||--o{ TOKEN : "compartido vía"

note bottom
  Todas las tablas existen en una única
  base PostgreSQL central. No hay tablas
  espejo en el dispositivo móvil.
end note
@enduml
